Examples updated with demo files

--- a/examples/pathway_scoring.ipynb
+++ b/examples/pathway_scoring.ipynb
@@ -22,7 +22,9 @@
     "\n",
     "```bash get1KGGRCh38.sh /yourfolder/ EUR```\n",
     "\n",
-    "This command will download and plink convert 1KG project data for the european subpolulation. The data will be stored in ```/yourfolder/```. "
+    "This command will download and plink convert 1KG project data for the european subpolulation. The data will be stored in ```/yourfolder/```. \n",
+    "\n",
+    "NOTE: The refpanel in the ```demo/``` folder is for chr 1 only and simulated !"
    ]
   },
   {
@@ -40,7 +42,7 @@
    "source": [
     "from PascalX import genescorer\n",
     "\n",
-    "Gscorer = genescorer.chi2sum(window=50000,varcutoff=0.95)"
+    "Gscorer = genescorer.chi2sum(window=50000,varcutoff=0.99)"
    ]
   },
   {
@@ -54,9 +56,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reference panel data not imported. Trying to import...\n",
+      "ERROR:  ../demo/EUR.simulated.chr2.(tped|vcf).gz not found\n"
+     ]
+    }
+   ],
    "source": [
-    "Gscorer.load_refpanel('/yourfolder/EUR.1KGphase3.GRCh38',parallel=1)\n",
+    "Gscorer.load_refpanel('../demo/EUR.simulated',parallel=1)\n",
     "    "
    ]
   },
@@ -112,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19024 active genes\n"
+      "18498 active genes\n"
      ]
     }
    ],
@@ -136,19 +147,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32706 SNPs loaded\n"
+      "331769 SNPs loaded\n"
      ]
     }
    ],
    "source": [
-    "Gscorer.load_GWAS(\"path/gwasfilename\",rscol=0,pcol=1,header=False)\n"
+    "Gscorer.load_GWAS(\"../demo/gwasA.tsv.gz\",rscol=0,pcol=4,header=False)\n"
    ]
   },
   {
@@ -167,37 +178,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[chr1] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr2] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr3] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr4] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr5] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr6] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr7] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr8] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr9] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr10] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr11] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr12] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr13] (done          ): 100%|██████████ [ estimated time left: 00:00 ] \n",
-      "[chr14] (done          ): 100%|██████████ [ estimated time left: 00:00 ] \n",
-      "[chr15] (done          ): 100%|██████████ [ estimated time left: 00:00 ] \n",
-      "[chr16] (done          ): 100%|██████████ [ estimated time left: 00:00 ] \n",
-      "[chr17] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr18] (done          ): 100%|██████████ [ estimated time left: 00:00 ] \n",
-      "[chr19] (done          ): 100%|██████████ [ estimated time left: 00:00 ]   \n",
-      "[chr20] (done          ): 100%|██████████ [ estimated time left: 00:00 ] \n",
-      "[chr21] (done          ): 100%|██████████ [ estimated time left: 00:00 ] \n",
-      "[chr22] (done          ): 100%|██████████ [ estimated time left: 00:00 ] \n",
-      "8094 genes scored\n",
-      "10930 genes can not be scored (check annotation)\n"
+      " "
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2afadf27aa1e467b8070ea2f254d8423",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|           [ estimated time left: ? ]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2010 genes scored\n",
+      "16488 genes can not be scored (check annotation)\n"
      ]
     }
    ],
@@ -209,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the ```parallel=``` option to increase the number of cpu cores to use (make sure that you have sufficient memory). Note that for ```parallel!=1``` it is recommended to switch off the progress bar via setting ```nobar=True```"
+    "Use the ```parallel=``` option to increase the number of cpu cores to use (make sure that you have sufficient memory). Note that you can switch off the progress bar via setting ```nobar=True```."
    ]
   },
   {
@@ -221,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,12 +277,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2400 modules loaded\n"
+      "1 modules loaded\n"
      ]
     }
    ],
    "source": [
-    "M = Pscorer.load_modules(\"filename.tsv\",ncol=0,fcol=2)\n"
+    "M = Pscorer.load_modules(\"../demo/pw_test.tsv\",ncol=0,fcol=2)\n"
    ]
   },
   {
@@ -291,10 +301,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scoring 7423 missing (meta)-genes\n",
-      "(done          ): 100%|██████████ [ estimated time left: 00:00 ]                                                                                                                                                                                                                                                                                                                                                                                                                                                                 \n",
-      "1400 genes scored\n",
-      "6023 genes can not be scored (check annotation)\n"
+      "Scoring 2 missing (meta)-genes\n",
+      " "
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c5425eda65544508109a2c28dee122e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|           [ estimated time left: ? ]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 genes scored\n"
      ]
     }
    ],
@@ -311,27 +340,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1403 Neuronal System | 1.4933631349374102e-09\n",
-      "1920 Signal Transduction | 4.794817236310414e-06\n",
-      "2252 Transmission across Chemical Synapses | 2.5467482889240234e-07\n"
+      "0 PATHWAY_X | 6.219056261820743e-05\n"
      ]
     }
    ],
    "source": [
-    "Pscorer.get_sigpathways(R,cutoff=1e-5)"
+    "Pscorer.get_sigpathways(R,cutoff=1e-4)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -345,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
